samples/_failures_safe/1761506158_702e1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d0ba647.c: In function ‘main’:
./samples/SAFE/__tmp_7d0ba647.c:133:12: error: missing terminating " character
  133 |     printf("
      |            ^
./samples/SAFE/__tmp_7d0ba647.c:133:5: error: expected expression at end of input
  133 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_7d0ba647.c:133:5: error: expected declaration or statement at end of input
